# budget-tracker

./: .gitignore  .prettierignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml
docs/: sync-architecture.md
e2e/: _helpers.ts  import-export.spec.ts  language-switch.spec.ts  persistence.spec.ts  transactions.spec.ts  undo-tree.spec.ts
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AddTxModal.test.tsx  AddTxModal.tsx  AttachmentsList.tsx  AttachmentsModal.tsx  Card.tsx  ConfirmDialog.tsx  EmptyState.tsx  FirstRunModal.tsx  PageHeader.tsx  SectionTitle.tsx  Sidebar.tsx  StatCard.tsx  TxRow.tsx  UndoRedoBar.tsx  UpdateModal.tsx  icons.tsx  nav-items.ts  styles.ts
src/i18n/: LangProvider.tsx  messages.ts
src/lib/: attachments.test.ts  attachments.ts  balance.test.ts  balance.ts  currency.ts  excel.test.ts  excel.ts  format.test.ts  format.ts  history.test.ts  history.ts  persist-tauri.ts  persist-web.ts  persist.test.ts  persist.ts  reducer.test.ts  reducer.ts  updater.ts  useBreakpoint.ts  useStore.ts
src/screens/: Categories.tsx  Dashboard.tsx  History.tsx  ImportExport.tsx  Settings.tsx  Transactions.tsx
(+1 files in other folders)
