[package]
name = "muhaseb-tech"
version = "0.6.0"
description = "Muhaseb Tech — desktop"
authors = ["Moaz Baghdadi"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "muhaseb_tech_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-process = "2"

# Updater is desktop-only (Mobile uses Play Store / App Store). Keep the crate
# out of mobile builds so its android-incompatible code never compiles.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
